// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load valid references 1`] = `
Object {
  "defaultFeatures": Array [],
  "dependencies": Array [],
  "dir": ".",
  "features": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "name": "package-name",
  "references": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "a",
      "optional": true,
      "version": "1.0",
    },
  ],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads and parses manifest 1`] = `
Object {
  "defaultFeatures": Array [
    "a",
    "b",
  ],
  "dependencies": Array [
    Object {
      "defaultFeatures": true,
      "features": Array [],
      "name": "dictionary",
      "optional": true,
      "registry": "vba-blocks",
      "version": "1.4.1",
    },
    Object {
      "defaultFeatures": false,
      "features": Array [
        "dictionary-scripting",
      ],
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "web",
      "optional": false,
      "tag": "v4.1.3",
    },
  ],
  "dir": ".",
  "features": Array [
    Object {
      "dependencies": Array [],
      "name": "a",
      "references": Array [],
      "src": Array [
        "b",
      ],
    },
    Object {
      "dependencies": Array [
        "dictionary",
      ],
      "name": "b",
      "references": Array [],
      "src": Array [],
    },
    Object {
      "dependencies": Array [],
      "name": "c",
      "references": Array [
        "scripting",
      ],
      "src": Array [],
    },
  ],
  "metadata": Object {
    "authors": Array [
      "Tim Hall <tim.hall.engr@gmail.com>",
    ],
    "name": "testing",
    "publish": true,
    "version": "0.1.0",
  },
  "name": "testing",
  "references": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "Scripting",
      "optional": true,
      "version": "1.0",
    },
  ],
  "src": Array [
    Object {
      "name": "a",
      "optional": false,
      "path": "src/a.bas",
    },
    Object {
      "name": "b",
      "optional": true,
      "path": "src/b.cls",
    },
  ],
  "targets": Array [
    Object {
      "name": "testing",
      "path": "targets/xlsm",
      "type": "xlsm",
    },
  ],
  "version": "0.1.0",
}
`;

exports[`loads valid dependencies 1`] = `
Object {
  "defaultFeatures": Array [],
  "dependencies": Array [
    Object {
      "defaultFeatures": true,
      "features": Array [],
      "name": "a",
      "optional": false,
      "registry": "vba-blocks",
      "version": "^1.0.0",
    },
    Object {
      "defaultFeatures": false,
      "features": Array [
        "a",
        "b",
      ],
      "name": "b",
      "optional": true,
      "registry": "vba-blocks",
      "version": "^2.0.0",
    },
    Object {
      "defaultFeatures": true,
      "features": Array [],
      "name": "c",
      "optional": false,
      "path": "packages/c",
    },
    Object {
      "branch": "master",
      "defaultFeatures": true,
      "features": Array [],
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "d",
      "optional": false,
    },
    Object {
      "branch": "next",
      "defaultFeatures": true,
      "features": Array [],
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "e",
      "optional": false,
    },
    Object {
      "defaultFeatures": true,
      "features": Array [],
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "f",
      "optional": false,
      "tag": "v1.0.0",
    },
    Object {
      "defaultFeatures": true,
      "features": Array [],
      "git": "https://github.com/VBA-tools/VBA-Web",
      "name": "g",
      "optional": false,
      "rev": "a1b2c3d4",
    },
  ],
  "dir": ".",
  "features": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid features 1`] = `
Object {
  "defaultFeatures": Array [
    "a",
    "b",
  ],
  "dependencies": Array [],
  "dir": ".",
  "features": Array [
    Object {
      "dependencies": Array [],
      "name": "a",
      "references": Array [],
      "src": Array [
        "A",
      ],
    },
    Object {
      "dependencies": Array [
        "B",
      ],
      "name": "b",
      "references": Array [],
      "src": Array [],
    },
    Object {
      "dependencies": Array [],
      "name": "c",
      "references": Array [
        "C",
      ],
      "src": Array [],
    },
  ],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid package metadata 1`] = `
Object {
  "defaultFeatures": Array [],
  "dependencies": Array [],
  "dir": ".",
  "features": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid sources 1`] = `
Object {
  "defaultFeatures": Array [],
  "dependencies": Array [],
  "dir": ".",
  "features": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [
    Object {
      "name": "A",
      "optional": false,
      "path": "src/a.bas",
    },
    Object {
      "name": "B",
      "optional": false,
      "path": "src/b.cls",
    },
    Object {
      "name": "C",
      "optional": true,
      "path": "src/c.frm",
    },
  ],
  "targets": Array [],
  "version": "1.0.0",
}
`;

exports[`loads valid targets 1`] = `
Object {
  "defaultFeatures": Array [],
  "dependencies": Array [],
  "dir": ".",
  "features": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "name": "package-name",
    "publish": false,
    "version": "1.0.0",
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "targets": Array [
    Object {
      "name": "package-name",
      "path": "targets/xlsm",
      "type": "xlsm",
    },
    Object {
      "name": "addin",
      "path": "targets/xlam",
      "type": "xlam",
    },
  ],
  "version": "1.0.0",
}
`;
